--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dine_app_web",
+  "name": "new_react_typescript_project",
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config webpack/webpack.config.js --env ENV=dev --open",
